--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,16 +9,17 @@
     <div class="section__content section__content--p30">
         <div class="tab-content">
             <form action="{{ url_for('dashboard')}}" method="get">
-                <div class="form-group">
-                    <label class="bmd-label-floating">Count</label>
-                    <input type="text" name="count" class="form-control"  value="" required>
+                <div class='row'>
+                        <label class="bmd-label-floating col-1">Count</label>
+                        <input type="text" name="count" class="form-control col-2"  value="" required>
+                        <label class="bmd-label-floating col-1">Gender</label>
+                        <input type="text" name="gender" class="form-control col-2" value="" required>
+                        {% if fitter_year %}
+                        <input type="text" name="year_id" class="form-control col-2" value="{{fitter_year}}" hidden>
+                        {% endif %}
+                    <button type="submit" class="btn btn-login float-right col-2" style="background-color:#4BD1A0;margin-left: 1rem">SUBMIT
+                    </button>
                 </div>
-                <div class="form-group">
-                        <label class="bmd-label-floating">Gender</label>
-                        <input type="text" name="gender" class="form-control" value="" required>
-                </div>
-                <button type="submit" class="btn btn-login float-right" style="background-color:#4BD1A0;">SUBMIT
-                </button>
             </form>
             
             <div class="container-fluid">
@@ -26,20 +27,30 @@
                     {% if teachers %}
                     <table class="table table-hover">
                         <thead class="text-success">
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Number of teacher</th>
+                            <th>Mã Tổ</th>
+                            <th>Tên Tổ</th>
+                            <th>Số lượng giáo viên</th>
                         </thead>
                         <tbody>
                             {% for teacher in teachers %}
                             <tr>
-                                <td>{{ teacher.Id }}</td>
-                                <td>{{ teacher.Name }}</td>
-                                <td>{{ teacher.Number_of_teachers }}</td>
+                                <td>{{ teacher.Ma_to }}</td>
+                                <td>{{ teacher.Ten_to }}</td>
+                                <td>{{ teacher.So_luong_giao_vien }}</td>
                                 <td>
-                                    <button type="button" rel="tooltip" title="Edit" class="btn btn-success btn-simple btn-xs" data-toggle="modal" data-target="#edit-teacher-{{teacher.id}}-modal">
-                                        <i class="material-icons" style="color: purple;">edit</i>
-                                    </button>
+                                    {% if fitter_gender %}
+                                    <a href="/table/teacher?fitter=1&group_id={{teacher.Ma_to}}&gender={{fitter_gender}}">
+                                        <button type="button" rel="tooltip" title="Edit" class="btn btn-success btn-simple btn-xs" >
+                                            <i class="material-icons" style="color: purple;">edit</i>
+                                        </button>
+                                    </a>
+                                    {% else %}
+                                    <a href="/table/teacher?fitter=1&group_id={{teacher.Ma_to}}&gender=Male">
+                                        <button type="button" rel="tooltip" title="Edit" class="btn btn-success btn-simple btn-xs" >
+                                            <i class="material-icons" style="color: purple;">edit</i>
+                                        </button>
+                                    </a>
+                                    {% endif %}
                                 </td>
                             </tr>
                             {% endfor %}
@@ -51,10 +62,57 @@
                 </div>
             </div>
 
-            <div role="tabpanel" class="tab-pane" id="subject-table">
-                    <p>this is subject content</p>
-            </div>
+            
         </div>
+
+        <div class="tab-content">
+                <form action="{{ url_for('dashboard')}}" method="get">
+                    <div class='row'>
+                        <label class="bmd-label-floating col-1">Year</label>
+                        <input type="text" name="year_id" class="form-control col-2" value="" required>
+                        {% if fitter_count %}
+                        <input type="text" name="count" class="form-control col-2" value="{{fitter_count}}" hidden>
+                        {% endif %}
+                        {% if fitter_gender %}
+                        <input type="text" name="gender" class="form-control col-2" value="{{fitter_gender}}" hidden>
+                        {% endif %}
+                        <button type="submit" class="btn btn-login float-right col-2" style="background-color:#4BD1A0;margin-left: 1rem">SUBMIT
+                        </button>
+                    </div>
+                </form>
+                
+                <div class="container-fluid">
+                    <div class="table-responsive table--no-card m-b-30">
+                        {% if proc2s %}
+                        <table class="table table-hover">
+                            <thead class="text-success">
+                                <th>Mã Lớp</th>
+                                <th>Tên Lớp</th>
+                                <th>Mã giáo viên</th>
+                                <th>Tên giáo viên</th>
+                                <th>Số lượng học sinh</th>
+                            </thead>
+                            <tbody>
+                                {% for proc2 in proc2s %}
+                                <tr>
+                                    <td>{{ proc2.class_id }}</td>
+                                    <td>{{ proc2.class_name }}</td>
+                                    <td>{{ proc2.teacher_id }}</td>
+                                    <td>{{ proc2.teacher_name }}</td>
+                                    <td>{{ proc2.Number_of_students }}</td>
+                                    
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <p> NO DATA </p>
+                        {% endif %}
+                    </div>
+                </div>
+                
+                
+                </div>
         <div class="row">
             <div class="col-md-12">
                 <div class="copyright">
