--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,6 +7,20 @@
 
 <div class="main-content">
     <div class="section__content section__content--p30">
+        <div class="container-fluid" style="min-height:100%">
+            {% with messages = get_flashed_messages() %} 
+              {% if messages %} 
+                {% for message in messages %}
+                <div class="alert alert-warning alert-dismissible" role="alert">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button> 
+                  {{message}}
+                </div>
+                {% endfor %} 
+              {% endif %} 
+            {% endwith %}
+          </div>
         <div class="tab-content">
             <form action="{{ url_for('dashboard')}}" method="get">
                 <div class='row'>
