--- a/templates/table-teacher.html
+++ b/templates/table-teacher.html
@@ -39,7 +39,20 @@
 <div class="main-content">
     <div class="section__content section__content--p30">
         <div class="tab-content">
-        
+            <div class="container-fluid" style="min-height:100%">
+                {% with messages = get_flashed_messages() %} 
+                  {% if messages %} 
+                    {% for message in messages %}
+                    <div class="alert alert-warning alert-dismissible" role="alert">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button> 
+                      {{message}}
+                    </div>
+                    {% endfor %} 
+                  {% endif %} 
+                {% endwith %}
+              </div>
             <div class="container-fluid">
                 <div class="table-responsive table--no-card m-b-30">
                     {% if teachers %}
