remove bold option and display gender value when edit

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,12 +26,12 @@
                 <div class='row'>
                         <label class="bmd-label-floating col-1">Count</label>
                         <input type="number" name="count" class="form-control col-2"  value="" required>
-                        <label class="bmd-label-floating">Gender</label>
+                        <label style ="padding-left: 20px; padding-right: 10px;" class="bmd-label-floating">Gender</label>
                         <select name="gender" class='col-2'>
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
                         </select>
-                        <label class="bmd-label-floating ">Sort Field</label>
+                        <label style = "padding-left: 10px; padding-right: 10px;" class="bmd-label-floating ">Sort Field</label>
                         <select name="sort_field" class='col-1'>
                             <option value="ma_to">Mã Tổ</option>
                             <!-- <option value="ten_to">Tên Tổ</option> t'is got error-->
